--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "morgan": "^1.10.0",
+    "node-rsa": "^1.1.1",
     "nodemon": "^2.0.15",
     "passport": "^0.5.2",
     "passport-coinbase-oauth2": "^0.0.3"
